syntax = "proto3";

option csharp_namespace = "GrpcContracts";

package clients;

service ClientService {
  rpc GetClientById (ClientRequest) returns (ClientResponse);
}

message ClientRequest {
  int64 id = 1;
}

message ClientResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string companyName = 5;
}
